--- a/src/razor-pages/razor-pages.csproj
+++ b/src/razor-pages/razor-pages.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RazorCompileOnPublish>false</RazorCompileOnPublish>
     <RootNamespace>razor_pages</RootNamespace>
   </PropertyGroup>
 
